# Hospital-Project

./: Allergist.cpp  Allergist.h  Anesthesiologist.cpp  Anesthesiologist.h  CMakeLists.txt  Cardiologist.cpp  Cardiologist.h  Dermatologist.cpp  Dermatologist.h  Doctor.cpp  Doctor.h  Employee.cpp  Employee.h  FamilyDoctor.cpp  FamilyDoctor.h  Gynecologist.cpp  Gynecologist.h  Intern.cpp  Intern.h  Metologist.cpp  Metologist.h  Neurologist.cpp  Neurologist.h  Obstetrician.cpp  Obstetrician.h  Oncologist.cpp  Oncologist.h  Ophtalmologist.cpp  Ophtalmologist.h  Otolaryngology.cpp  Otolaryngology.h  Person.cpp  Person.h  Physiotherapist.cpp  Physiotherapist.h  Pulmonologist.cpp  Pulmonologist.h  Surgeon.cpp  Surgeon.h  main.cpp
